# FMI-2017-2018

./: .gitignore
DAA-practikum/: add.cpp  awkwardCrawl.cpp  cern.cpp  chocolate.cpp  coachingSort.cpp  evil.cpp  exam.cpp  fractions.cpp  hello.cpp  multyMatrices.cpp  names.cpp  permSwap.cpp  quickSort.cpp  razpraviq.cpp  redica.cpp  sorting.cpp  sqrtN.cpp  time_calculating.cpp
DAA-practikum/hw1/: tikso.cpp
GD/: mecho.min.js~  page.html  page.html~
OOP/Army/: Commander.h  Soldier.cpp  Soldier.h
OOP/RasterGraphics/: Command.h  CommandConteiner.h  Conteiner.h  GraphicsApp.cpp  GraphicsApp.h  Helper.h  Image.cpp  Image.h  ImagePBM.cpp  ImagePBM.h  ImagePGM.cpp  ImagePGM.h  ImagePPM.cpp  ImagePPM.h  Session.cpp  Session.h  image01.ppm  main.cpp  (+13 more)
OOP/hw3/SocialNetwork/: Admin.cpp  Admin.h  Admin_posts.html  Ali_posts.html  CMakeLists.txt  ImagePost.cpp  ImagePost.h  Moderator.cpp  Moderator.h  Post.cpp  Post.h  SocialNetwork.cpp  SocialNetwork.h  TextPost.cpp  TextPost.h  URLPost.cpp  URLPost.h  User.cpp  User.h  main.cpp  post_1.html  post_2.html
SDP/: algorithms.cpp  eratosten.c  pascalt.c  radix_sort.cpp  rotationArray.c  strings.txt~  test.cpp  test_pair.cpp
UP/: .Gabito.cpp.un~  .Iveto1.cpp.un~  .aleks.cpp.un~  .testRand.cpp.un~  a.out  ali.cpp  atoi.cpp  dynamicMatrix.cpp  factorial.cpp  galons.cpp  gameOfLife.cpp  horse.cpp  ipBits.cpp  isDigRepeat.cpp  productDigits.cpp  string_generator.cpp  task2_dani.cpp  test.cpp  test.cpp~  testArrays.cpp  testCharArray.cpp  testIndex.cpp  testRand.cpp  testRec.cpp  testShift.cpp  testString.cpp  testStrlen.cpp
(+196 files in other folders)
